lib/tools/orbit/test_output/closure.output
QStandardPaths: wrong permissions on runtime directory /run/user/1000/, 0755 instead of 0700
Flow compiler (3rd generation)

Processing 'orbit' on http server
done in 0.13s

tests/closure.orb: tests/closure.orb:1:18: Parse error
let a = 10;\nlet add = \x. x + a;\nadd(5)
                 ^
app->exec() == 1
